force-app/main/default/objects/Pickup_Calendars__c/Pickup_Calendars__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Pickup Calendars</label>
</CustomObject>