force-app/main/default/objects/Pickup_Calendars__c/fields/BarrieCurbeSide__c.field-meta.xml
<CustomField>
    <fullName>BarrieCurbeSide__c</fullName>
    <description>The record Id of the Barrie Curb Side Pickup Public calendar</description>
    <externalId>true</externalId>
    <label>Barrie Curb Side Pickup</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>