force-app/main/default/objects/Pickup_Calendars__c/fields/Montreal_Curb_Side_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Montreal_Curb_Side_Pickup__c</fullName>
    <externalId>true</externalId>
    <label>Montreal Curb Side Pickup</label>
    <length>18</length>
    <type>Text</type>
</CustomField>