force-app/main/default/objects/Pickup_Calendars__c/fields/WhitefishCurbSide__c.field-meta.xml
<CustomField>
    <fullName>WhitefishCurbSide__c</fullName>
    <description>The record Id of the Whitefish Curb Side Pickup Calendar</description>
    <externalId>true</externalId>
    <label>Whitefish Curb Side Pickup</label>
    <length>18</length>
    <type>Text</type>
</CustomField>